@@ -40,6 +40,9 @@ REM ############################################################################
 REM Set this if you're using SSH-based CVS
 REM set CVS_RSH=
 
+REM Uncomment the following line if you have OutOfMemoryError errors
+REM set CC_OPTS=-Xms128m -Xmx256m
+
 REM The root of the CruiseControl directory.  The key requirement is that this is the parent
 REM directory of CruiseControl's lib and dist directories.
 REM By default assume they are using the batch file from the local directory.
@@ -70,7 +73,7 @@ set DISTDIR=%CCDIR%\dist
 
 set CRUISE_PATH=%CRUISE_PATH%;%DISTDIR%\cruisecontrol.jar;%LIBDIR%\log4j.jar;%LIBDIR%\jdom.jar;%LIBDIR%\ant\ant.jar;%LIBDIR%\ant\ant-launcher.jar;%LIBDIR%\xercesImpl-2.7.0.jar;%LIBDIR%\xml-apis-2.7.0.jar;%LIBDIR%\xalan-2.6.0.jar;%LIBDIR%\jakarta-oro-2.0.3.jar;%LIBDIR%\mail.jar;%LIBDIR%\junit.jar;%LIBDIR%\activation.jar;%LIBDIR%\commons-net-1.1.0.jar;%LIBDIR%\starteam-sdk.jar;%LIBDIR%\mx4j.jar;%LIBDIR%\mx4j-tools.jar;%LIBDIR%\mx4j-remote.jar;%LIBDIR%\smack.jar;%LIBDIR%\comm.jar;%LIBDIR%\x10.jar;%LIBDIR%\fast-md5.jar;.
 
-set EXEC="%JAVA_HOME%\bin\java" -cp "%CRUISE_PATH%" -Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder CruiseControl %*
+set EXEC="%JAVA_HOME%\bin\java" %CC_OPTS% -cp "%CRUISE_PATH%" -Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder CruiseControl %*
 echo %EXEC%
 %EXEC%
 
